# creativity-meter

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
experiments/: analyze_results.py  comprehensive_analysis.py  evaluate_dataset.py  generate_report.py  genre_style_analysis.py  run_experiment.py
results/: experiment_results.csv  final_report.md  report.md  test_results.csv  wikiart_sd_enriched.csv  wikiart_sd_full_scores.csv  wikiart_sd_scores.csv
results/comprehensive_analysis/: comprehensive_report.md
results/genre_analysis/: artist_summary.csv  genre_style_report.md  style_summary.csv
scripts/: download_wikiart_sd.py  prepare_test_data.py  run_full_analysis.sh
src/: feature_extractor.py  inversion.py  pipeline.py  similarity.py
